--- a/src/components/Login/LoginForm.css
+++ b/src/components/Login/LoginForm.css
@@ -6,6 +6,7 @@ login-div {
     padding: 20px 40px;
     height: 100vh;
     margin-bottom: 30px;
+    background-color: red;
   }
   
   .login-img {
