--- a/src/components/RestaurantPage/RestaurantPage.css
+++ b/src/components/RestaurantPage/RestaurantPage.css
@@ -14,8 +14,13 @@
     border-radius: 10px;
   }
   
+  .restaurant-page
+  {
+    background-color: gray;
+  }
   .restaurant-page-img {
     width: 50%;
+
   }
   .restaurant-page-img > img {
     width: 100%;
